@@ -8,6 +8,7 @@ import net.minecraft.client.gui.components.ImageButton;
 import net.minecraft.client.gui.components.WidgetSprites;
 import net.minecraft.client.gui.screens.inventory.AbstractContainerScreen;
 import net.minecraft.client.resources.sounds.SimpleSoundInstance;
+import net.minecraft.core.BlockPos;
 import net.minecraft.core.component.DataComponents;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
@@ -15,22 +16,23 @@ import net.minecraft.sounds.SoundEvents;
 import net.minecraft.util.Mth;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.entity.player.Inventory;
-import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.inventory.Slot;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
 import net.minecraft.world.item.component.CustomData;
 import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.entity.BlockEntity;
 import net.neoforged.api.distmarker.Dist;
 import net.neoforged.api.distmarker.OnlyIn;
 import net.neoforged.neoforge.network.PacketDistributor;
+import org.jetbrains.annotations.NotNull;
+import xox.labvorty.weaversparadise.blocks.entities.ClothcraftingStationBlockEntity;
 import xox.labvorty.weaversparadise.data.network.ClothcraftingNetworkMultiMessage;
+import xox.labvorty.weaversparadise.data.recipes.ClothcraftingRecipeInput;
 import xox.labvorty.weaversparadise.gui.menu.ClothcraftingMenu;
 import xox.labvorty.weaversparadise.init.WeaversParadiseItems;
 import xox.labvorty.weaversparadise.init.WeaversParadiseKeyMappings;
-import xox.labvorty.weaversparadise.items.materials.CottonSpoolItem;
-import xox.labvorty.weaversparadise.items.materials.JeansSpoolItem;
-import xox.labvorty.weaversparadise.items.materials.SilkSpoolItem;
-import xox.labvorty.weaversparadise.items.materials.WoolSpooltem;
+import xox.labvorty.weaversparadise.init.WeaversParadiseRecipes;
 
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -42,11 +44,10 @@ public class ClothcraftingScreen extends AbstractContainerScreen<ClothcraftingMe
     private final static HashMap<String, Object> guistate = ClothcraftingMenu.guistate;
     private final Level world;
     private final int x, y, z;
-    private final Player entity;
     private static int gameTime = 0;
     private static boolean gameStarted = false;
     private static int gameScore = 0;
-    private static List<ItemStack> items = new ArrayList();
+    private static List<ItemStack> items = new ArrayList<>();
     private ImageButton startMinigame;
     private ImageButton claimItems;
     private int upColoredTime = 0;
@@ -89,9 +90,9 @@ public class ClothcraftingScreen extends AbstractContainerScreen<ClothcraftingMe
     private String inputThree = "";
     private String inputFour = "";
     private String inputFive = "";
-    private static String clothType = "";
+    private static ItemStack clothType = new ItemStack(Items.STONE, 1);
 
-    public static void updateData(int time, int score, boolean ison, List<ItemStack> item, String type) {
+    public static void updateData(int time, int score, boolean ison, List<ItemStack> item, ItemStack type) {
         gameTime = time;
         gameScore = score;
         gameStarted = ison;
@@ -105,13 +106,12 @@ public class ClothcraftingScreen extends AbstractContainerScreen<ClothcraftingMe
         this.x = container.x;
         this.y = container.y;
         this.z = container.z;
-        this.entity = container.entity;
         this.imageWidth = 176;
         this.imageHeight = 209;
     }
 
     @Override
-    public void render(GuiGraphics guiGraphics, int mouseX, int mouseY, float partialTicks) {
+    public void render(@NotNull GuiGraphics guiGraphics, int mouseX, int mouseY, float partialTicks) {
             if (gameStarted) {
                 this.renderMiniGame(guiGraphics, partialTicks, mouseX, mouseY);
             } else {
@@ -157,16 +157,10 @@ public class ClothcraftingScreen extends AbstractContainerScreen<ClothcraftingMe
     }
 
     @Override
-    protected void renderBg(GuiGraphics guiGraphics, float partialTicks, int gx, int gy) {
+    protected void renderBg(@NotNull GuiGraphics guiGraphics, float partialTicks, int gx, int gy) {
         RenderSystem.setShaderColor(1, 1, 1, 1);
         RenderSystem.enableBlend();
         RenderSystem.defaultBlendFunc();
-
-        //if (items != null) {
-        //    for (int i = 0; i < items.size(); i++) {
-        //        guiGraphics.renderItem(items.get(i), (i * 16), this.topPos);
-        //    }
-        //}
 
         if ((gx >= this.leftPos + 99) && (gx <= this.leftPos + 99 + 72) && (gy >= this.topPos + 96) && (gy <= this.topPos + 96 + 25)) {
             List<Component> components = new ArrayList<>();
@@ -628,12 +622,10 @@ public class ClothcraftingScreen extends AbstractContainerScreen<ClothcraftingMe
         );
 
         String keyRight = WeaversParadiseKeyMappings.MINIGAME_RIGHT_BUTTON.getTranslatedKeyMessage().getString();
-        float keyRightScale;
+        float keyRightScale = 1.0f;
 
         if (keyRight.length() > 5) {
             keyRightScale = 5.0f / keyRight.length();
-        } else {
-            keyRightScale = 1.0f;
         }
 
         float rightStat = rightColoredTime / 20.0f;
@@ -664,12 +656,10 @@ public class ClothcraftingScreen extends AbstractContainerScreen<ClothcraftingMe
         poseStack.popPose();
 
         String keyLeft = WeaversParadiseKeyMappings.MINIGAME_LEFT_BUTTON.getTranslatedKeyMessage().getString();
-        float keyLeftScale;
+        float keyLeftScale = 1.0f;
 
         if (keyLeft.length() > 5) {
             keyLeftScale = 5.0f / keyLeft.length();
-        } else {
-            keyLeftScale = 1.0f;
         }
 
         float leftStat = leftColoredTime / 20.0f;
@@ -705,7 +695,10 @@ public class ClothcraftingScreen extends AbstractContainerScreen<ClothcraftingMe
     @Override
     public boolean keyPressed(int key, int b, int c) {
         if (key == 256) {
-            this.minecraft.player.closeContainer();
+            if (this.minecraft != null && minecraft.player != null) {
+                this.minecraft.player.closeContainer();
+            }
+
             return true;
         }
 
@@ -777,54 +770,26 @@ public class ClothcraftingScreen extends AbstractContainerScreen<ClothcraftingMe
     }
 
     @Override
-    protected void renderLabels(GuiGraphics guiGraphics, int mouseX, int mouseY) {
+    protected void renderLabels(@NotNull GuiGraphics guiGraphics, int mouseX, int mouseY) {
     }
 
     public boolean hasCraftItemsInSlot() {
-        Slot slot = this.menu.slots.get(0);
+        Slot slot = this.menu.slots.getFirst();
+        if (slot == null || slot.getItem().isEmpty()) return false;
 
-        if (slot != null) {
-            if (slot.getItem().is(WeaversParadiseItems.SILK_SPOOL.get()) && slot.getItem().getCount() > 5) {
-                return true;
-            }
-
-            if (slot.getItem().is(WeaversParadiseItems.WOOL_SPOOL.get()) && slot.getItem().getCount() > 5) {
-                return true;
-            }
-
-            if (slot.getItem().is(WeaversParadiseItems.COTTON_SPOOL.get()) && slot.getItem().getCount() > 5) {
-                return true;
-            }
-
-            if (slot.getItem().is(WeaversParadiseItems.JEANS_SPOOL.get()) && slot.getItem().getCount() > 5) {
-                return true;
-            }
-        }
-
-        return false;
+        ItemStack stack = slot.getItem();
+        return stack.getCount() >= world.getRecipeManager()
+                .getRecipeFor(
+                        WeaversParadiseRecipes.CLOTHCRAFTING_TYPE.get(),
+                        new ClothcraftingRecipeInput(stack),
+                        world
+                )
+                .map(h -> h.value().getSpoolCost())
+                .orElse(Integer.MAX_VALUE);
     }
 
-    public String getClothType() {
-        Slot slot = this.menu.slots.get(0);
-        ItemStack stack = slot.getItem();
-
-        if (stack.getItem() instanceof SilkSpoolItem silkSpool) {
-            return "SILK";
-        }
-
-        if (stack.getItem() instanceof WoolSpooltem woolSpool) {
-            return "WOOL";
-        }
-
-        if (stack.getItem() instanceof CottonSpoolItem cottonSpool) {
-            return "COTTON";
-        }
-
-        if (stack.getItem() instanceof JeansSpoolItem jeansSpool) {
-            return "JEANS";
-        }
-
-        return "";
+    public ItemStack getClothType() {
+        return clothType;
     }
 
     @Override
@@ -837,18 +802,16 @@ public class ClothcraftingScreen extends AbstractContainerScreen<ClothcraftingMe
                 25,
                 new WidgetSprites(ResourceLocation.parse("weaversparadise:textures/screens/clothcrafting_button.png"), ResourceLocation.parse("weaversparadise:textures/screens/clothcrafting_button.png")),
                 e -> {
-                        if (hasCraftItemsInSlot()) {
-                            PacketDistributor.sendToServer(new ClothcraftingNetworkMultiMessage(1, x, y, z, 900, 0, true, items, getClothType()));
-                            PacketDistributor.sendToServer(new ClothcraftingNetworkMultiMessage(5, x, y, z, gameTime, gameScore, gameStarted, items, clothType));
-                            guistate.remove("startMinigame");
-                            guistate.remove("claimItems");
-                            this.removeWidget(startMinigame);
-                            this.removeWidget(claimItems);
-                        }
-                }
-                ) {
+                    if (hasCraftItemsInSlot()) {
+                        PacketDistributor.sendToServer(new ClothcraftingNetworkMultiMessage(4, x, y, z, 0, 0, false, new ArrayList<>(), getClothType()));
+                        guistate.remove("startMinigame");
+                        guistate.remove("claimItems");
+                        this.removeWidget(startMinigame);
+                        this.removeWidget(claimItems);
+                    }
+                }) {
             @Override
-            public void renderWidget(GuiGraphics guiGraphics, int x, int y, float partialTicks) {
+            public void renderWidget(@NotNull GuiGraphics guiGraphics, int x, int y, float partialTicks) {
                 guiGraphics.blit(sprites.get(isActive(), isHoveredOrFocused()), getX(), getY(), 0, 0, width, height, width, height);
             }
         };
@@ -866,7 +829,7 @@ public class ClothcraftingScreen extends AbstractContainerScreen<ClothcraftingMe
                 }
         ) {
             @Override
-            public void renderWidget(GuiGraphics guiGraphics, int x, int y, float partialTicks) {
+            public void renderWidget(@NotNull GuiGraphics guiGraphics, int x, int y, float partialTicks) {
                 guiGraphics.blit(sprites.get(isActive(), isHoveredOrFocused()), getX(), getY(), 0, 0, width, height, width, height);
             }
         };
